--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,73 @@ body {
     background-color: #222f4b;
 }
 
+.feedspg {
+    height: 100%;
+    width: auto;
+    position: relative;
+    z-index: 1;
+    padding-left: 20px;
+    background-color: #222f4b;
+    
+}
+
+.lgfeedlnk {
+    display:flex;
+    position:relative;
+    width: 100%;
+    height: auto;
+    padding-top: 15px;
+    padding-right: 10px;
+}
+
+.feedthumb {
+    height: 250px;
+    float:left;
+}
+
+.feedtitle {
+    float:right;
+    color: white;
+    font-family: helvetica;
+    font-size: 14;
+    padding-left: 15px;
+    padding-top: 100px;
+}
+
+.first {
+    order: 1;
+}
+
+.second {
+    order: 2;
+}
+
+.third {
+    order:3;
+}
+
+.fourth {
+    order:4;
+}
+
+.statistics {
+    display: table;
+    padding-left: 25px;
+    font-family: helvetica;
+    font-size: 14;
+}
+
+.statistics > div {
+    display: table-row;
+}
+
+.statistics > div > div {
+    display: table-cell;
+    padding: 5px;
+}
+
+
+
 /* Text styling */
 h1 {
   color: blue;
@@ -97,4 +164,4 @@ h1 {
   float: right;
 }
 
-/* Styling for Accessibility */
+
